test/spec_vectors/local_tee/fail/module_12.wat
(module (func $type-param-arg-num-vs-num (param i32) (local.tee 0 (f32.const 0))))